// Original proto file in shopping-order-service-scala
syntax = "proto3";

package shoppingorder;

option java_multiple_files = true;
option java_package = "shopping.order.proto";

// gRPC definition for ShoppingOrderService

service ShoppingOrderService {
  rpc Order(OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
  string cart_id = 1;
  repeated Item items = 2;
}

message Item {
  string item_id = 1;
  int32 quantity = 2;
}

message OrderResponse {
  bool ok = 1;
}
